--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,7 +2,8 @@
 add_executable(MySFMLApp main.cpp)
 
 # Include directories
-target_include_directories(MySFMLApp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+target_include_directories(MySFMLApp PRIVATE 
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/game2)
 
 # Link the GameManager library and SFML libraries
 target_link_libraries(MySFMLApp GameManager sfml-graphics sfml-window sfml-system)
@@ -10,3 +11,15 @@ target_link_libraries(MySFMLApp GameManager sfml-graphics sfml-window sfml-syste
 set_target_properties(MySFMLApp PROPERTIES 
     WINDOWS_EXPORT_ALL_SYMBOLS ON
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/$<CONFIG>/bin)
+
+install(TARGETS MySFMLApp
+    RUNTIME
+        DESTINATION  ${CMAKE_INSTALL_BINDIR}
+        COMPONENT Runtime
+    ARCHIVE
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        COMPONENT Development
+    LIBRARY
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        COMPONENT Development
+)
