--- a/src/game2/CMakeLists.txt
+++ b/src/game2/CMakeLists.txt
@@ -1,18 +1,29 @@
 project(pingpong_game)
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_FILES)
-file(GLOB_RECURSE HEADER_FILE LIST_DIRECTORIES false "*.hpp")
-list(FILTER HEADER_FILE INCLUDE REGEX "Game")
+file(GLOB_RECURSE PUBLIC_HEADER_FILE LIST_DIRECTORIES false "*.hpp")
+list(APPEND HEADER_FILES "${PUBLIC_HEADER_FILE}")
+list(FILTER PUBLIC_HEADER_FILE INCLUDE REGEX "Game")
+file(GLOB RESOURCE_FILES LIST_DIRECTORIES false "${CMAKE_CURRENT_SOURCE_DIR}/resources/*.*")
 
-add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
+add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${RESOURCE_FILES})
 
 target_include_directories(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
 
-target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
+target_sources(${PROJECT_NAME} PRIVATE
+    FILE_SET ${PROJECT_NAME}_headers
+    TYPE HEADERS
+    FILES "${HEADER_FILES}"
+)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES 
     WINDOWS_EXPORT_ALL_SYMBOLS ON
-    PUBLIC_HEADER "${HEADER_FILE}")
+    PUBLIC_HEADER "${PUBLIC_HEADER_FILE}"
+    )
+
+source_group("Resource Files" FILES ${RESOURCE_FILES})
+
+target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
 
 if(WIN32)
     add_custom_command(
@@ -45,5 +56,3 @@ install(
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/game2
         COMPONENT PublicHeader
 )
-
-install (DIRECTORY resources DESTINATION ${CMAKE_INSTALL_BINDIR})
