fix for unix system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,11 +32,9 @@ set(CMAKE_EXECUTE_PROCESS_COMMAND_ECHO STDOUT)
 set(INSTALL_CONFIG_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
 set(GRAPH_OUTPUT_NAME graph)
 
-# if(WIN32)
-#     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-# else()
-#     set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
-# endif()
+if(UNIX)
+    set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
+endif(UNIX)
 
 foreach(build_type IN LISTS CMAKE_CONFIGURATION_TYPES)
     string(TOUPPER ${build_type} build_type_upper)
