dynamic load dll

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,12 +1,15 @@
 # Add source files for the executable
-add_executable(MySFMLApp main.cpp)
+add_executable(MySFMLApp main.cpp ModuleManager.cpp)
 
 # Include directories
 target_include_directories(MySFMLApp PRIVATE 
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/game2)
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/interface>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/game2>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/interface>)
 
 # Link the GameManager library and SFML libraries
-target_link_libraries(MySFMLApp PRIVATE pingpong_game sfml-graphics sfml-window sfml-system)
+target_link_libraries(MySFMLApp PRIVATE sfml-graphics sfml-window sfml-system)
 
 install(TARGETS MySFMLApp
     RUNTIME
