update to dynamic load library on unix system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,7 +120,14 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "*.tcc": "cpp",
+        "codecvt": "cpp",
+        "cwctype": "cpp",
+        "memory_resource": "cpp",
+        "string_view": "cpp",
+        "numbers": "cpp",
+        "cinttypes": "cpp"
     },
     "cmake.clearOutputBeforeBuild": false,
     "cmake.ctest.parallelJobs": 8
