--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -130,5 +130,8 @@
         "cinttypes": "cpp"
     },
     "cmake.clearOutputBeforeBuild": false,
-    "cmake.ctest.parallelJobs": 8
+    "cmake.ctest.parallelJobs": 8,
+    "git.autofetch": true,
+    "git.autofetchPeriod": 180,
+    "git.autorefresh": true
 }
