--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,196 +1,17 @@
 {
-    "editor.tabSize": 4,
-    "editor.rulers": [
-        120
-    ],
-    "editor.renderWhitespace": "trailing",
-    "editor.suggestSelection": "first",
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.stickyScroll.enabled": false,
-    "editor.bracketPairColorization.enabled": false,
-    "editor.cursorSmoothCaretAnimation": "on",
-    "editor.suggest.preview": true,
-    "terminal.integrated.defaultProfile.windows": "Command Prompt",
-    "debug.onTaskErrors": "debugAnyway",
-    "explorer.compactFolders": false,
-    "explorer.confirmDragAndDrop": false,
-    "explorer.confirmDelete": false,
-    "explorer.copyRelativePathSeparator": "/",
-    "files.autoSave": "onFocusChange",
-    "files.exclude": {
-        "node_modules/**/*": true,
-        "**/.classpath": true,
-        "**/.project": true,
-        "**/.settings": true,
-        "**/.factorypath": true
-    },
     "files.associations": {
-        ".clang*": "yaml",
-        "*.hpp.in": "cpp",
-        "*.in": "cpp"
-    },
-    "files.insertFinalNewline": true,
-    "files.trimFinalNewlines": true,
-    "files.trimTrailingWhitespace": true,
-    "workbench.startupEditor": "none",
-    "workbench.editorAssociations": {
-        "*.md": "vscode.markdown.preview.editor",
-        "*.svg": "svgPreviewer.customEditor"
-    },
-    "workbench.colorTheme": "Default Dark+",
-    "git.enableSmartCommit": true,
-    "git.autofetch": true,
-    "git.confirmSync": false,
-    "git.openRepositoryInParentFolders": "always",
-    "prettier.tabWidth": 4,
-    "prettier.singleQuote": true,
-    "prettier.jsxSingleQuote": true,
-    "prettier.trailingComma": "all",
-    "prettier.useEditorConfig": true,
-    "prettier.bracketSpacing": false,
-    "markdown.validate.enabled": true,
-    "[markdown]": {
-        "files.trimTrailingWhitespace": false,
-        "editor.formatOnSave": false,
-        "editor.defaultFormatter": "yzhang.markdown-all-in-one",
-        "editor.wordWrap": "wordWrapColumn",
-        "editor.wordWrapColumn": 120
-    },
-    "[yaml]": {
-        "editor.formatOnSave": false,
-        "editor.defaultFormatter": "redhat.vscode-yaml",
-        "editor.wordWrap": "wordWrapColumn",
-        "editor.wordWrapColumn": 120
-    },
-    "[json]": {
-        "editor.formatOnSave": false,
-        "editor.defaultFormatter": "vscode.json-language-features"
-    },
-    "[jsonc]": {
-        "editor.formatOnSave": false
-    },
-    "[plaintext]": {
-        "editor.wordWrap": "wordWrapColumn",
-        "editor.wordWrapColumn": 120
-    },
-    "[toml]": {
-        "editor.wordWrap": "wordWrapColumn",
-        "editor.wordWrapColumn": 120
-    },
-    "better-comments.tags": [
-        {
-            "tag": "XXX",
-            "color": "#F8C471"
-        },
-        {
-            "tag": "WARN",
-            "color": "#FF6961"
-        },
-        {
-            "tag": "NOTE",
-            "color": "#3498DB"
-        },
-        {
-            "tag": "TODO",
-            "color": "#77C3EC"
-        }
-    ],
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "codesnap.showWindowControls": false,
-    "codesnap.shutterAction": "copy",
-    "Workspace_Formatter.excludePattern": [
-        "**/build",
-        "**/.*",
-        "**/.vscode",
-        "**/html"
-    ],
-    "Workspace_Formatter.includePattern": [
-        "*.c",
-        "*.h",
-        "*.cc",
-        "*.hh",
-        "*.cpp",
-        "*.hpp"
-    ],
-    "svg.preview.autoOpen": true,
-    "remote.WSL.fileWatcher.polling": true,
-    "errorLens.delay": 1000,
-    "errorLens.enabledDiagnosticLevels": [
-        "error",
-        "warning"
-    ],
-    "errorLens.enabled": false,
-    "C_Cpp.clang_format_sortIncludes": true,
-    "C_Cpp.vcFormat.indent.preserveComments": true,
-    "C_Cpp.vcFormat.indent.namespaceContents": false,
-    "C_Cpp.vcFormat.indent.caseContentsWhenBlock": true,
-    "C_Cpp.vcFormat.space.pointerReferenceAlignment": "right",
-    "C_Cpp.default.browse.limitSymbolsToIncludedHeaders": false,
-    "C_Cpp.default.cppStandard": "c++20",
-    "C_Cpp.default.cStandard": "c11",
-    "C_Cpp.formatting": "clangFormat",
-    "[c]": {
-        "editor.formatOnSave": false,
-        "editor.defaultFormatter": "ms-vscode.cpptools"
-    },
-    "[cpp]": {
-        "editor.formatOnSave": false,
-        "editor.defaultFormatter": "ms-vscode.cpptools"
-    },
-    "[cuda-cpp]": {
-        "editor.defaultFormatter": "ms-vscode.cpptools"
-    },
-    "cmake.configureOnOpen": false,
-    "cmake.autoSelectActiveFolder": false,
-    "cmake.configureOnEdit": false,
-    "cmake.configureOnOpen": false,
-    "files.associations": {
-        "*.yml": "yaml",
-        "memory": "cpp",
-        "charconv": "cpp",
-        "chrono": "cpp",
-        "exception": "cpp",
-        "format": "cpp",
-        "functional": "cpp",
-        "future": "cpp",
-        "ios": "cpp",
-        "iterator": "cpp",
-        "limits": "cpp",
-        "mutex": "cpp",
-        "random": "cpp",
-        "ranges": "cpp",
-        "regex": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "system_error": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "variant": "cpp",
-        "vector": "cpp",
-        "xiosbase": "cpp",
-        "xlocale": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xlocnum": "cpp",
-        "xloctime": "cpp",
-        "xutility": "cpp",
-        "iostream": "cpp",
+        "map": "cpp",
         "algorithm": "cpp",
-        "any": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
         "bitset": "cpp",
         "cctype": "cpp",
+        "charconv": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
         "compare": "cpp",
-        "complex": "cpp",
         "concepts": "cpp",
-        "condition_variable": "cpp",
-        "csignal": "cpp",
-        "cstdarg": "cpp",
         "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
@@ -199,55 +20,58 @@
         "ctime": "cpp",
         "cwchar": "cpp",
         "deque": "cpp",
-        "filesystem": "cpp",
-        "forward_list": "cpp",
+        "exception": "cpp",
+        "format": "cpp",
         "fstream": "cpp",
+        "functional": "cpp",
         "initializer_list": "cpp",
         "iomanip": "cpp",
+        "ios": "cpp",
         "iosfwd": "cpp",
+        "iostream": "cpp",
         "istream": "cpp",
+        "iterator": "cpp",
+        "limits": "cpp",
         "list": "cpp",
         "locale": "cpp",
-        "map": "cpp",
+        "memory": "cpp",
         "new": "cpp",
-        "numeric": "cpp",
         "optional": "cpp",
         "ostream": "cpp",
         "queue": "cpp",
-        "ratio": "cpp",
+        "ranges": "cpp",
         "set": "cpp",
-        "source_location": "cpp",
         "span": "cpp",
-        "stack": "cpp",
-        "stop_token": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
         "streambuf": "cpp",
         "string": "cpp",
-        "thread": "cpp",
+        "system_error": "cpp",
         "tuple": "cpp",
-        "typeindex": "cpp",
+        "type_traits": "cpp",
+        "typeinfo": "cpp",
         "unordered_map": "cpp",
-        "unordered_set": "cpp",
         "utility": "cpp",
-        "valarray": "cpp",
+        "vector": "cpp",
         "xfacet": "cpp",
         "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
         "xlocbuf": "cpp",
         "xlocinfo": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "*.tcc": "cpp",
+        "xutility": "cpp",
+        "chrono": "cpp",
         "codecvt": "cpp",
-        "cwctype": "cpp",
-        "memory_resource": "cpp",
-        "string_view": "cpp",
-        "numbers": "cpp",
-        "cinttypes": "cpp"
+        "forward_list": "cpp",
+        "ratio": "cpp"
     },
-    "cmake.clearOutputBeforeBuild": false,
-    "cmake.ctest.parallelJobs": 8,
-    "git.autofetch": true,
-    "git.autofetchPeriod": 180,
-    "git.autorefresh": true
+    "cmake.configureOnEdit": false
 }
