--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,5 +73,6 @@
         "forward_list": "cpp",
         "ratio": "cpp"
     },
-    "cmake.configureOnEdit": false
+    "cmake.configureOnEdit": false,
+    "C_Cpp.errorSquiggles": "disabled"
 }
