--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,5 +73,8 @@
         "forward_list": "cpp",
         "ratio": "cpp"
     },
-    "cmake.configureOnEdit": false
+    "cmake.configureOnEdit": false,
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
+    "C_Cpp.default.cppStandard": "c++17",
+    "C_Cpp.default.cStandard": "c17"
 }
