--- a/src/pingpong_game/CMakeLists.txt
+++ b/src/pingpong_game/CMakeLists.txt
@@ -38,7 +38,7 @@ if(WIN32)
     add_custom_command(
             TARGET ${PROJECT_NAME} POST_BUILD
             COMMENT "Copy resources"
-            COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/resources ${RUNTIME_OUTPUT_DIRECTORY}/resources
+            COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/resources $<TARGET_FILE_DIR:${PROJECT_NAME}>/../resources
             VERBATIM
         )
 endif()
