--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,18 +9,17 @@ target_include_directories(MySFMLApp PRIVATE
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/interface>)
 
 # Link the GameManager library and SFML libraries
-target_link_libraries(MySFMLApp PRIVATE sfml-graphics sfml-window sfml-system)
+# target_link_libraries(MySFMLApp PRIVATE sfml-graphics sfml-window sfml-system)
 
-add_custom_command(
-    TARGET MySFMLApp POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_SOURCE_DIR}/create_shortcuts.ps1 ${CMAKE_BINARY_DIR}/create_shortcuts.ps1
-)
-
-install(CODE "
-    execute_process(
-        COMMAND powershell.exe -File \${CMAKE_SOURCE_DIR}/create_shortcuts.ps1 -InstallDir \${CMAKE_INSTALL_PREFIX} -AppName MyApp -ExePath \${CMAKE_INSTALL_PREFIX}/bin/MySFMLApp.exe
-    )
-")
+if(WIN32)
+    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/mysfmlapp.ico DESTINATION resources COMPONENT Resources)
+    
+    install(CODE "
+        execute_process(
+            COMMAND powershell.exe -File ${CMAKE_CURRENT_SOURCE_DIR}/resources/create_shortcuts.ps1 -InstallDir \${CMAKE_INSTALL_PREFIX} -AppName MySFMLApp -ExePath \${CMAKE_INSTALL_PREFIX}/bin/MySFMLApp.exe -IconPath \${CMAKE_INSTALL_PREFIX}/resources/mysfmlapp.ico
+        )
+    ")
+endif(WIN32)
 
 install(TARGETS MySFMLApp
     RUNTIME
