--- a/src/pingpong_game/CMakeLists.txt
+++ b/src/pingpong_game/CMakeLists.txt
@@ -6,7 +6,7 @@ list(APPEND HEADER_FILES "${PUBLIC_HEADER_FILE}")
 list(FILTER PUBLIC_HEADER_FILE INCLUDE REGEX "Game")
 file(GLOB RESOURCE_FILES LIST_DIRECTORIES false "${CMAKE_CURRENT_SOURCE_DIR}/resources/*.*")
 
-add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${RESOURCE_FILES})
+add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
 
 target_include_directories(${PROJECT_NAME} PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -20,6 +20,10 @@ target_sources(${PROJECT_NAME} PRIVATE
     FILES "${HEADER_FILES}"
 )
 
+target_sources(${PROJECT_NAME} PRIVATE
+    ${RESOURCE_FILES}
+)
+
 set_target_properties(${PROJECT_NAME} PROPERTIES 
     WINDOWS_EXPORT_ALL_SYMBOLS ON
     PUBLIC_HEADER "${PUBLIC_HEADER_FILE}"
@@ -27,7 +31,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 
 source_group("Resource Files" FILES ${RESOURCE_FILES})
 
-target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-audio rapidcsv)
+target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-audio rapidcsv SQLiteCpp)
 
 if(WIN32)
     add_custom_command(
