--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,11 @@ FetchContent_Declare(SQLiteCpp
     GIT_TAG 3.3.1 )
 FetchContent_MakeAvailable(SQLiteCpp)
 
+FetchContent_Declare(magic_enum
+    GIT_REPOSITORY https://github.com/Neargye/magic_enum.git
+    GIT_TAG v0.9.6 )
+FetchContent_MakeAvailable(magic_enum)
+
 add_subdirectory(src)
 add_subdirectory(app)
 
