--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,21 @@
         "codecvt": "cpp",
         "forward_list": "cpp",
         "ratio": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "any": "cpp",
+        "condition_variable": "cpp",
+        "coroutine": "cpp",
+        "resumable": "cpp",
+        "future": "cpp",
+        "mutex": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "regex": "cpp",
+        "stack": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp",
+        "unordered_set": "cpp",
+        "variant": "cpp"
     },
     "cmake.configureOnEdit": false,
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
