--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,10 @@
         "variant": "cpp"
     },
     "cmake.configureOnEdit": false,
+    "cmake.configureArgs": [
+        "--graphviz=docs/graph/graph.dot",
+        "--no-warn-unused-cli"
+    ],
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "C_Cpp.default.cppStandard": "c++17",
     "C_Cpp.default.cStandard": "c17"
