--- a/.github/workflows/ubuntu-test.yml
+++ b/.github/workflows/ubuntu-test.yml
@@ -4,29 +4,17 @@ on:
 jobs:
   Configuration:
     runs-on: ubuntu-latest
+    container:
+      image: duyleduc520/mysfmlapp:latest
     steps:
-      - name: update & install deps
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential
-          sudo apt-get install -y cmake
-          sudo apt-get install -y git doxygen
-          sudo apt-get install -y python3 python3-pip
-          sudo apt-get install -y ninja-build
-          sudo apt-get install -y graphviz pkg-config
-          sudo apt-get install -y dos2unix
-          sudo apt-get install -y cmake-format
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Check folder
-        run: ls
-      - name: Configure
-        run: make config-ubuntu
-      - name: Format
-        run: cmake --build --preset=ubuntu-format
-      - name: Docs
-        run: cmake --build --preset=ubuntu-document
-      - name: Install
-        run: cmake --build --preset=ubuntu-install
-      - name: Test
-        run: ctest --preset=ubuntu
+      - name: Configure and Build Project
+        uses: threeal/cmake-action@main
+        with:
+          args: |
+            --graphviz=docs/graph/graph.dot
+            --no-warn-unused-cli
+            --preset=ubuntu
+          build-args: |
+            --preset=ubuntu
