--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,7 @@ project(src)
 
 add_subdirectory(pingpong_game)
 
-install(DIRECTORY interface DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PublicHeader)
+install(
+    DIRECTORY interface DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    COMPONENT PublicHeader
+    )
