--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -18,8 +18,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Configure Project
-        run: cmake --graphviz=docs/graph/graph.dot --no-warn-unused-cli -DCMAKE_BUILD_TYPE=${{inputs.build_type}} --preset=ubuntu
-      - name: Build
-        run: cmake --build --preset=ubuntu-${{inputs.target}}
+      - name: Configure and Build Project
+        uses: threeal/cmake-action@main
+        with:
+          args: |
+            --graphviz=docs/graph/graph.dot
+            --no-warn-unused-cli
+            -DCMAKE_BUILD_TYPE=${{inputs.build_type}}
+            -DDOCS_DIR=docs
+          build-args: |
+            --target=${{inputs.target}}
+            --config=${{inputs.build_type}}
     
