--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ endif(UNIX)
 
 if(NOT CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     set(CMAKE_COLOR_DIAGNOSTICS ON)
+    message("CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE}")
 endif(NOT CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
 
 foreach(build_type IN LISTS CMAKE_CONFIGURATION_TYPES)
