--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
         description: "Target to be built"
         required: false
         type: "string"
-        default: "complete"
+        default: "all"
   push:
     branches:
       - main
