--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -30,6 +30,6 @@ jobs:
             -S.
             -Bbuild
           build-args: |
-            --target=ubuntu-${{inputs.target}}
+            --target=${{inputs.target}}
             --config=${{inputs.build_type}}
     
